Actualizo mi sitio con nueva información

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section>
       <h3>Experiencia</h3>
       <ul>
-        <li>Data Analytics & Machine Learning - Coderhouse</li>
+        <li>Data Science & Machine Learning - Anyone AI - Coderhouse</li>
         <li>Anyone AI - Sprint Projects</li>
       </ul>
     </section>
